--- a/portfolioSite.html
+++ b/portfolioSite.html
@@ -2,6 +2,11 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
+  <link href="bootsrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="portfolio.css">
+  <script>
+  </script>
+
 </head>
 
   <div id="banner">
