--- a/portfolioSite.html
+++ b/portfolioSite.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title>Sarah's Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
   <link href="bootsrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,17 +15,17 @@
     <div style="margin-right: 250px; display: block;">
       <div style="color: #fff; font-family: Orbitron; display: inline-block; padding-top: 40px; margin-left: 270px; font-size: 20px;">NinjaSar</div>
        <a href="#contact" class="navlink">
-        <div id="nav" style= "width: 120px; height: 50px; padding-top: 15px">
+        <div class="nav" style= "width: 120px; height: 50px; padding-top: 15px">
           CONTACT
         </div>
       </a>
       <a href="#portfolio" class="navlink" >
-        <div id="nav" style= "width: 150px; height: 50px; padding-top: 15px">
+        <div class="nav" style= "width: 150px; height: 50px; padding-top: 15px">
         PORTFOLIO
         </div>
        </a>
       <a href="#aboutMe" class="navlink" >
-        <div id="nav" style= "width: 90px; height: 50px; padding-top: 15px">
+        <div class="nav" style= "width: 90px; height: 50px; padding-top: 15px">
           ABOUT
         </div>
       </a>
@@ -98,9 +99,22 @@
   </div>
 
   <div id="footer-top">
-  </div>
-
-  <div id="footer-bottom">
-  </div>
-
+    <div style="display: inline-block; float: left; margin: 0 auto; text-align: center; max-width: 200px; height: 150px; font-size: 18px;">
+      <span style="font-size: 22px; font-weight: bold;">ABOUT THIS PAGE</span>
+      <br>
+      <br>
+      Made with <i class="fa fa-music"></i>, <i class="fa fa-coffee"></i>, and <i class="fa fa-heart"></i> by Sarah Pierce.
+    </div>
+    <div style="float: right; margin: 0 auto; max-width: 300px; height: 150px; font-size: 22px; font-weight: bold; text-align: center">
+      AROUND THE WEB
+      <br>
+      <br>
+      <a class="button social"  href="https://www.linkedin.com/in/sarah-pierce-57989abb"><i class="fa fa-linkedin"></i></a></button>
+      <a href="#" class="button"><i class="fa fa-github"></i></a>
+      <a href ="#" class="button"><i class="fa fa-tumblr"></i></a>
+      <a href ="#" class="button"><i class="fa fa-twitter"></i></a>
+   </div>
+ </div>
+<div id="footer-bottom">
+</div>
 </html>
