got rid of useless margin

--- a/portfolioSite.html
+++ b/portfolioSite.html
@@ -99,13 +99,13 @@
   </div>
 
   <div id="footer-top">
-    <div style="display: inline-block; float: left; margin: 0 auto; text-align: center; max-width: 200px; height: 150px; font-size: 18px;">
+    <div style="display: inline-block; float: left;  text-align: center; max-width: 200px; height: 150px; font-size: 18px;">
       <span style="font-size: 22px; font-weight: bold;">ABOUT THIS PAGE</span>
       <br>
       <br>
       Made with <i class="fa fa-music"></i>, <i class="fa fa-coffee"></i>, and <i class="fa fa-heart"></i> by Sarah Pierce.
     </div>
-    <div style="float: right; margin: 0 auto; max-width: 300px; height: 150px; font-size: 22px; font-weight: bold; text-align: center">
+    <div style="float: right;  max-width: 300px; height: 150px; font-size: 22px; font-weight: bold; text-align: center">
       AROUND THE WEB
       <br>
       <br>
