changed margins to percents and added words in my footer

--- a/portfolioSite.html
+++ b/portfolioSite.html
@@ -13,7 +13,7 @@
   <div id="banner">
 
     <div style="margin-right: 250px; display: block;">
-      <div style="color: #fff; font-family: Orbitron; display: inline-block; padding-top: 40px; margin-left: 270px; font-size: 20px;">NinjaSar</div>
+      <div style="color: #fff; font-family: Orbitron; display: inline-block; padding-top: 40px; margin-left: 20%; font-size: 20px;">NinjaSar</div>
        <a href="#contact" class="navlink">
         <div class="nav" style= "width: 120px; height: 50px; padding-top: 15px">
           CONTACT
@@ -99,13 +99,13 @@
   </div>
 
   <div id="footer-top">
-    <div style="display: inline-block; float: left;  text-align: center; max-width: 200px; height: 150px; font-size: 18px;">
+    <div style="display: inline-block; float: left;  text-align: center; margin-top: 50px; margin-left: 20%; max-width: 200px; height: 150px; font-size: 18px;">
       <span style="font-size: 22px; font-weight: bold;">ABOUT THIS PAGE</span>
       <br>
       <br>
       Made with <i class="fa fa-music"></i>, <i class="fa fa-coffee"></i>, and <i class="fa fa-heart"></i> by Sarah Pierce.
     </div>
-    <div style="float: right;  max-width: 300px; height: 150px; font-size: 22px; font-weight: bold; text-align: center">
+    <div style="float: right; margin-top: 50px; margin-right: 20%; max-width: 300px; height: 150px; font-size: 22px; font-weight: bold; text-align: center">
       AROUND THE WEB
       <br>
       <br>
@@ -115,6 +115,7 @@
       <a href ="#" class="button"><i class="fa fa-twitter"></i></a>
    </div>
  </div>
-<div id="footer-bottom">
-</div>
+ <div id="footer-bottom">
+   <div style="padding-top: 15px;"><span style="font-family: Orbitron;">NinjaSar</span> <span style="font-size: 7px;">TM</span> 2016. all rights y'know</div>
+ </div>
 </html>
