made links work and changed some wording

--- a/portfolioSite.html
+++ b/portfolioSite.html
@@ -110,12 +110,12 @@
       <br>
       <br>
       <a class="button social"  href="https://www.linkedin.com/in/sarah-pierce-57989abb"><i class="fa fa-linkedin"></i></a></button>
-      <a href="#" class="button"><i class="fa fa-github"></i></a>
-      <a href ="#" class="button"><i class="fa fa-tumblr"></i></a>
-      <a href ="#" class="button"><i class="fa fa-twitter"></i></a>
+      <a href="https://github.com/ninjasar" class="button"><i class="fa fa-github"></i></a>
+      <a href ="http://sweetpotatosayrah-blog.tumblr.com/" class="button"><i class="fa fa-tumblr"></i></a>
+      <a href ="https://twitter.com/sarahnoelle902" class="button"><i class="fa fa-twitter"></i></a>
    </div>
  </div>
  <div id="footer-bottom">
-   <div style="padding-top: 15px;"><span style="font-family: Orbitron;">NinjaSar</span> <span style="font-size: 7px;">TM</span> 2016. all rights y'know</div>
+   <div style="padding-top: 15px;"><span style="font-family: Orbitron;">NinjaSar</span> <span style="font-size: 7px;">TM</span> 2016. all rights reversed</div>
  </div>
 </html>
