--- a/weather.html
+++ b/weather.html
@@ -2,6 +2,7 @@
 <head>
   <script src="https://use.fontawesome.com/911aefd3b2.js"></script>
   <link rel="stylesheet" href = "weatherstyle.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <title>Local Weather</title>
 
 </head>
