added dynamic html + api

--- a/weather.html
+++ b/weather.html
@@ -1,8 +1,10 @@
 <html>
 <head>
+
   <script src="https://use.fontawesome.com/911aefd3b2.js"></script>
   <link rel="stylesheet" href = "weatherstyle.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="weatherscript.js"></script>
   <title>Local Weather</title>
 
 </head>
@@ -13,20 +15,11 @@
       <br>
       <br>
       <div class = "temp">
-        Your City
-        <br>
-        <br>
-        Your Temp &#8457
-        <br>
-        <br>
-        Your Outside Weather
-        <br>
-        <br>
-        <br>
-
-        <div style="font-size: 12px; padding: 10px;">Made By NinjaSar</div>
       </div>
-
+      <br>
+      <div class = "btn"></div>
+      <br>
+      <div style="font-size: 12px; padding: 10px;">Made By NinjaSar</div>
     </div>
   </div>
 </body>
