--- a/portfolioSite.html
+++ b/portfolioSite.html
@@ -1,41 +1,47 @@
 <html>
 <head>
   <title>Sarah's Portfolio</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
   <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
-  <link href="bootsrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="portfolio.css">
-  <script>
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"> </script>
 
 </head>
+<body >
+  <div id="banner" class="navbar-fixed-top" >
 
-  <div id="banner">
-
-    <div style="margin-right: 250px; display: block;">
+    <div style="margin-right: 250px; display: block;"  id="test">
       <div style="color: #fff; font-family: Orbitron; display: inline-block; padding-top: 40px; margin-left: 20%; font-size: 20px;">NinjaSar</div>
-       <a href="#contact" class="navlink">
-        <div class="nav" style= "width: 120px; height: 50px; padding-top: 15px">
-          CONTACT
-        </div>
-      </a>
-      <a href="#portfolio" class="navlink" >
-        <div class="nav" style= "width: 150px; height: 50px; padding-top: 15px">
-        PORTFOLIO
-        </div>
-       </a>
-      <a href="#aboutMe" class="navlink" >
-        <div class="nav" style= "width: 90px; height: 50px; padding-top: 15px">
-          ABOUT
-        </div>
-      </a>
+
+        <ul class="nav" >
+          <li>
+            <a href="#contact" class="navlink nav1 scrollable" >
+                CONTACT
+            </a>
+          </li>
+          <li>
+            <a href="#portfolio" class="navlink nav1 scrollable " >
+                PORTFOLIO
+            </a>
+          </li>
+          <li>
+            <a href="#aboutMe" class="navlink nav1 scrollable " >
+
+              ABOUT
+
+            </a>
+          </li>
+        </ul>
+
     </div>
   </div>
 
-  <div class="container">
-    <div id="aboutMe">
+  <div class="container"  >
+    <div id="aboutMe" class="anchor">
       <div class="info">
-      Hi there, welcome to my site!  I'm still just a rookie learning to code.  My strengths are HTML, CSS, JavaScript, and C++.
+      Hi there, welcome to my site!  I'm currently attending FreeCodeCamp.  My strengths are HTML, CSS, JavaScript, and C++.
           <br/>
           <br/>
         <i class="fa fa-cloud"></i>
@@ -50,26 +56,27 @@
           </b>
       </div>
       <div style= "display: flex">
-        <img src="http://img-cache.cdn.gaiaonline.com/8ef202026fffba8003b8c41a9e9353e7/http://i1109.photobucket.com/albums/h428/MatoKuroi/MikuHatsune.jpg" style="width: 300px; height: 300px; border-radius: 50%">
+        <img src="IMG_0967.jpg" style="width: 200px; height: 250px;border-radius: 50%">
       </div>
     </div>
-    <div id="portfolio">
+    <div id="portfolio" class="anchor">
       PORTFOLIO
         <br/>
       <i class="fa fa-code" style="font-weight: bold; padding-top: 20px;"></i>
         <br/>
         <br/>
-      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%201.08.55%20AM_zpsgv42lwht.png" class="pfimg img">
-      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%204.19.29%20PM_zpslqmzawik.png" class="pfimg img">
+      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%201.08.55%20AM_zpsgv42lwht.png" alt="chatroom.php" id="myImg" class="pfimg" >
+
+      <img src="wikiviewerscreenshot.png" class="pfimg img" alt="Wikipedia Viewer" >
         <br/>
-      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%205.24.58%20PM_zpsh4u31siw.png" class="pfimg img">
-      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%205.31.25%20PM_zpst52l8gte.png?t=1476401543" class="pfimg img">
+      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%205.24.58%20PM_zpsh4u31siw.png" class="pfimg img" alt="Made a dots game" >
+      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%205.31.25%20PM_zpst52l8gte.png?t=1476401543" class="pfimg img" alt="the colors change and the dot moves depending on where your mouse is" >
         <br/>
-      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%205.33.23%20PM_zpsrtjwq7ul.png?t=1476401844" class="pfimg img">
-      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%205.40.04%20PM_zpsmfxwsaku.png?t=1476402048" class="pfimg img">
+      <img src="quotemachinescreenshot.png" class="pfimg img" alt="I like to use atom" >
+      <img src="http://i1067.photobucket.com/albums/u421/sarah_pierce2/Screen%20Shot%202016-10-14%20at%205.40.04%20PM_zpsmfxwsaku.png?t=1476402048" class="pfimg img" alt="a rotating rainbow cube in 3d" >
     </div>
 
-    <div id="contact">
+    <div id="contact" class="anchor">
       CONTACT
         <br/>
       <i class="fa fa-code" style="font-weight: bold; padding-top: 20px;"></i>
@@ -93,7 +100,7 @@
         <br/>
       </form>
       <div class="contactinfo">
-      Feel free to contact me any time of day. (:  <br/>I am open to job and scholarship offers.  If you have any questions or are looking for advice on anything from ballet to learning to code on your own, hit me up! <br> <br>I am online every day so I'll most likely reply A.S.A.P.
+      Feel free to contact me any time! (:  <br/>I am open to job and scholarship offers.  If you have any questions or are looking for advice on anything from ballet to learning to code on your own, hit me up! <br> <br>I am online every day so I'll most likely reply A.S.A.P.
       </div>
     </div>
   </div>
@@ -116,6 +123,51 @@
    </div>
  </div>
  <div id="footer-bottom">
-   <div style="padding-top: 15px;"><span style="font-family: Orbitron;">NinjaSar</span> <span style="font-size: 7px;">TM</span> 2016. all rights reversed</div>
+   <div style="padding-top: 15px;"><span style="font-family: Orbitron;">NinjaSar</span> <span style="font-size: 7px;">TM</span> 2017. all rights reversed</div>
  </div>
+
+ <div id="myModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
+<script>
+// Get the modal
+  var modal = document.getElementById('myModal');
+
+  // Get the image and insert it inside the modal - use its "alt" text as a caption
+  var img = document.getElementsByClassName('pfimg');
+  var modalImg = document.getElementById("img01");
+  var captionText = document.getElementById("caption");
+
+
+  $(function() {
+    $('.pfimg').on('click', function() {
+      console.log('hi');
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+    });
+});
+
+  // Get the <span> element that closes the modal
+  var span = document.getElementsByClassName("close")[0];
+
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function() {
+      modal.style.display = "none";
+  }
+
+  $(function() {$('body').on('click', 'a.scrollable', function(event) {
+    var $anchor = $(this);
+    $('html, body').stop().animate({scrollTop: $($anchor.attr('href')).offset().top - 60},1500,'easeInOutExpo');
+    event.preventDefault();
+    });
+  });
+
+$('body').scrollspy({target: 'nav'})
+
+</script>
+
+</body>
 </html>
